# loop-cgal

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  release-please-manifest.json
.github/workflows/: pypi.yml  release-please.yml
_skbuild/linux-x86_64-3.11/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  cmake_install.cmake  install_manifest.txt
examples/: clip_test.py  clip_v2.py  split_test.py  test.py  test2.py
loop_cgal/: __init__.py  bindings.cpp
src/: api.cpp  api.h  clip.cpp  clip.h  edge_table.h  geological_model.h  globals.cpp  globals.h  isosurface_intersection.cpp  isosurface_intersection.h  marching_cubes.cpp  marching_cubes.h  mesh.cpp  mesh.h  meshutils.cpp  meshutils.h  numpymesh.h  surface.h  weld.cpp  weld.h
tests/: test_degenerate.py
